fixed spacing

--- a/frontend/src/pages/SearchPage/SearchPage.css
+++ b/frontend/src/pages/SearchPage/SearchPage.css
@@ -5,7 +5,6 @@
   background-color: var(--primary-bg);
   color: var(--font-color);
 }
-
 .search-input {
   padding: 20px;
   width: 1200px;
@@ -45,7 +44,7 @@
 
 .cover-image {
   width: 100%;
-  height: 180px;
+  height: 100%;
   object-fit: cover;
   border-radius: 0.75rem;
 }
